add some features

--- a/Tic tac toe game/index.html
+++ b/Tic tac toe game/index.html
@@ -12,9 +12,10 @@
      <nav class="navbar">
         <div class="logo">Tic Tac Toe</div>
         <ul class="nav-links">
-            <li><a href="#rules">Rules</a></li>
+            <li><a href="#how-to-play">Rules</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#game-overview">Game Overview</a></li>
         </ul>
     </nav>
 
@@ -24,7 +25,7 @@
         <button id="new-btn">New Game</button>
     </div>
 <main>
-    <h1>Tic Tac Toe</h1>
+    <h1>Welcome to Tic-Tac-Toe</h1>
     <div class="container">
     <div class="game">
         <button class="box"></button>
@@ -41,6 +42,45 @@
     <button id="reset-btn">Reset Game</button>
 </main>
 
+
+<!--features of game-->
+
+<!-- Game Overview Section -->
+<section id="game-overview">
+    <h2>Game Overview</h2>
+    <p>Tic-Tac-Toe is a classic two-player game where X's and O's battle it out on a 3x3 grid. Can you be the first to get 3 in a row?</p>
+</section>
+
+<!-- How to Play Section -->
+<section id="how-to-play" class="scroll-in">
+    <h2>How to Play</h2>
+    <ul>
+        <li>Players take turns placing their mark (X or O) on a 3x3 grid.</li>
+        <li>The first to get 3 in a row (horizontally, vertically, or diagonally) wins.</li>
+        <li>If all 9 squares are filled and no player has 3 in a row, it's a tie.</li>
+        <li>Play strategically to block your opponent from winning!</li>
+    </ul>
+</section>
+
+<!-- Interactive Game Demo Section -->
+<section id="game-demo">
+    <h2>Game Demo</h2>
+    <div id="tic-tac-toe-grid">
+        <div class="grid-item">X</div>
+        <div class="grid-item">O</div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item">X</div>
+        <div class="grid-item">O</div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item">X</div>
+    </div>
+</section>
+
+
+
+
  <!-- Footer Section -->
  <footer class="footer">
     <div class="footer-container">
@@ -54,7 +94,7 @@
 
 
  <script src="script.js">
-
+ 
     </script>
 </body>
 </html>
